# rust-gpu

./: CLAUDE.md  Cargo.toml
.claude/: settings.local.json
learning-project/: Cargo.toml  README.md
learning-project/runner/: Cargo.toml  build.rs
learning-project/runner/src/: main.rs
learning-project/shader/: Cargo.toml
learning-project/shader-utils/: Cargo.toml
learning-project/shader-utils/src/: lib.rs
learning-project/shader-utils/tests/: utils_test.rs
learning-project/shader/src/: lib.rs
