[package]
name = "learning-runner"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { workspace = true }
futures = { version = "0.3", default-features = false, features = ["std", "executor"] }
wgpu = { version = "26.0.1", features = ["spirv"] }
winit = { version = "0.30.0" }
bytemuck = "1.6.3"
env_logger = "0.11.0"

[build-dependencies]
spirv-builder = { workspace = true }
